# covid19-growth-rs

./: .gitignore  Cargo.toml  README.md  update.sh
src/: csse.rs  error.rs  graph.rs  main.rs  sciensano.rs  sus.rs
