[package]
name = "covid19-growth-rs"
version = "0.1.0"
authors = ["Maarten Deprez <deprez.maarten@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.6", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.13"
encoding_rs = "0.8.23"
